fixed form field character clipping

--- a/style.scss
+++ b/style.scss
@@ -169,6 +169,7 @@ body{
     color: white;
     margin-left: 20%;
     transition: width 0.1s linear;
+    line-height: auto;
 }
 .search-starter{
     position: fixed;
